fix: Show save button in secondary toolbar for editable files
Like the save button in the main toolbar, the save button in the
secondary toolbar is hidden by default and has to be explicitly shown
when needed.

The save button in the secondary toolbar also needs to be handled in the
same way as the one in the main toolbar regarding being enabled or
disabled, replacing the default download icon with a save icon, and
showing a loading icon instead of the save icon while the file is being
saved.

--- a/css/viewer.css
+++ b/css/viewer.css
@@ -26,7 +26,8 @@
 
 /* Replace default "Download" icon in "Download / Save" button with a "Save"
  * icon. */
-.toolbarButton#download::before {
+.toolbarButton#download::before,
+.secondaryToolbarButton#secondaryDownload::before {
 	-webkit-mask-image: url(../img/toolbarButton-secondaryToolbarSave.svg);
 	mask-image: url(../img/toolbarButton-secondaryToolbarSave.svg);
 }
@@ -38,7 +39,8 @@
 
 /* Hide the normal toolbar icon, which is a mask applied on a dark background,
  * when showing the loading icon. */
-.toolbarButton.icon-loading-small:before {
+.toolbarButton.icon-loading-small:before,
+.secondaryToolbarButton.icon-loading-small:before {
 	background-color: unset;
 }
 
@@ -66,6 +68,13 @@
 	transform-origin: center;
 	border: 2px solid var(--color-loading-light);
 	border-top-color: var(--color-loading-dark);
+}
+
+/* Place the loading icon on the secondary toolbar icon by using the same
+ * inset-inline-start of the secondary toolbar icon (12px) and correcting the
+ * margin from the loading icon (8px). */
+.secondaryToolbarButton.icon-loading-small:after {
+	inset-inline-start: 20px;
 }
 
 @keyframes rotate {
